Change: custom theme

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <style>
     body {
-      width: 100%;
+      width: auto;
       padding-top: 65px;
     }
     .container-full {
       width: 100%;
+      background-color: #E9E9E9;
     }
     .no-margin {
       margin: 0;
@@ -22,8 +23,10 @@
       padding: 0;
     }
     #text-area {
-      width: 100%;
+      width: auto;
       margin: auto;
+      color: black;
+      font-weight: bold;
     }
     #inputFile {
       display: none;
@@ -116,3 +119,4 @@
 </body>
 
 </html>
+
